; ModuleID = '/home/carl/AnghaBench/vlc/modules/packetizer/extr_flac.c_FLACStartcodeMatcher.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/packetizer/extr_flac.c_FLACStartcodeMatcher.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i32*)* @FLACStartcodeMatcher to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @FLACStartcodeMatcher(i32 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %7 = load i32*, i32** %6, align 8
  %8 = call i32 @VLC_UNUSED(i32* %7)
  %9 = load i64, i64* %5, align 8
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %3
  %12 = load i32, i32* %4, align 4
  %13 = icmp eq i32 %12, 255
  %14 = zext i1 %13 to i32
  br label %20

15:                                               ; preds = %3
  %16 = load i32, i32* %4, align 4
  %17 = and i32 %16, 254
  %18 = icmp eq i32 %17, 248
  %19 = zext i1 %18 to i32
  br label %20

20:                                               ; preds = %15, %11
  %21 = phi i32 [ %14, %11 ], [ %19, %15 ]
  ret i32 %21
}

declare dso_local i32 @VLC_UNUSED(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
